<resources>
    <string name="tb_app_name">Taskbar</string>
    <string name="tb_app_name_debug">Taskbar (Debug)</string>
    <string name="tb_taskbar_is_active">Taskbar is active</string>
    <string name="tb_click_to_open_settings">Click to open settings</string>
    <string name="tb_action_show">Show Taskbar</string>
    <string name="tb_action_hide">Hide Taskbar</string>
    <string name="tb_action_show_alt">Show</string>
    <string name="tb_action_hide_alt">Hide</string>
    <string name="tb_action_quit">Quit</string>
    <string name="tb_action_grant_permission">Grant permission</string>
    <string name="tb_action_open_settings">Open Settings</string>
    <string name="tb_permission_dialog_title">Permission needed</string>
    <string name="tb_permission_dialog_message">%s requires permission to draw over other apps before it can start.\n\n</string>
    <string name="tb_permission_dialog_instructions_phone">Please press \"Grant Permission\" and ensure that \"Permit drawing over other apps\" is enabled.</string>
    <string name="tb_permission_dialog_instructions_tv">Please press \"Open Settings\" to open the Android TV app settings menu. Select \"Special app access\", then select \"Display over other apps\" and ensure that Taskbar is enabled.</string>
    <string name="tb_pref_header_general">General settings</string>
    <string name="tb_pref_title_start_menu_layout">Start menu layout</string>
    <string name="tb_pref_title_background_tint">Background tint</string>
    <string name="tb_pref_title_scrollbar">Use fast scrollbar on start menu</string>
    <string name="tb_pref_title_start_on_boot">Launch on boot</string>
    <string-array name="tb_pref_start_menu_list">
        <item>Grid</item>
        <item>List</item>
    </string-array>
    <string name="tb_pref_header_recent_apps">Recent apps</string>
    <string name="tb_pref_title_enable_recents">Enable/disable usage access</string>
    <string name="tb_pref_title_recents_refresh_interval">Refresh rate</string>
    <string name="tb_pref_title_amount_of_recents">Recent apps to display</string>
    <string-array name="tb_pref_recents_amount">
        <item>Apps used within the past day</item>
        <item>Apps used after Taskbar start</item>
        <item>All apps (may reduce performance)</item>
    </string-array>
    <string-array name="tb_pref_recents_amount_alt">
        <item>Apps used within the past day</item>
        <item>Apps used after Taskbar start</item>
        <item>All apps (may reduce performance)</item>
        <item>Running apps only</item>
    </string-array>
    <string name="tb_pref_title_sort_order">Sort order</string>
    <string-array name="tb_pref_sort_order">
        <item>Recently used (descending)</item>
        <item>Recently used (ascending)</item>
        <item>Most time used (descending)</item>
        <item>Most time used (ascending)</item>
    </string-array>
    <string-array name="tb_pref_sort_order_alt">
        <item>Recently launched (descending)</item>
        <item>Recently launched (ascending)</item>
    </string-array>
    <string name="tb_pref_header_advanced">Advanced features</string>
    <string name="tb_pref_title_freeform_hack">Freeform window support</string>
    <string name="tb_pref_description_freeform_hack">Allows Taskbar to launch apps in freeform window mode, for a more desktop-like experience.\n\nThis feature is experimental, and may cause issues with standard split-screen multitasking.</string>
    <string name="tb_pref_header_about">About Taskbar</string>
    <string name="tb_pref_about_description">Taskbar: PC-style productivity for Android\n\n&#169; %1$d Braden Farmer\nApp logo by Mark Morilla\n\nClick here to check for updates or leave a rating! %2$s</string>
    <string name="tb_pref_about_description_alt">Taskbar: PC-style productivity for Android\n\n&#169; %1$d Braden Farmer\nApp logo by Mark Morilla</string>
    <string name="tb_pref_title_hide_taskbar">Collapse Taskbar when selecting items</string>
    <string name="tb_pref_title_launcher">Replace home screen</string>
    <string name="tb_pref_description_launcher">Use Taskbar as a home screen replacement</string>
    <string name="tb_set_wallpaper">Set wallpaper using&#8230;</string>
    <string name="tb_pref_disable_animations">Faster app switching</string>
    <string name="tb_pref_title_position">Position on screen</string>
    <string-array name="tb_pref_position_list">
        <item>Bottom left (horizontal)</item>
        <item>Bottom left (vertical)</item>
        <item>Bottom right (horizontal)</item>
        <item>Bottom right (vertical)</item>
        <item>Top left (horizontal)</item>
        <item>Top left (vertical)</item>
        <item>Top right (horizontal)</item>
        <item>Top right (vertical)</item>
    </string-array>
    <string name="tb_app_info">App info</string>
    <string name="tb_uninstall">Uninstall</string>
    <string name="tb_open_taskbar_settings">Open settings</string>
    <string name="tb_quit_taskbar">Quit</string>
    <string name="tb_pref_title_keyboard_shortcut">Enable keyboard shortcuts</string>
    <string name="tb_pref_description_keyboard_shortcut">Start/stop Taskbar: &#160; {fou_social-windows} + M &#160; {fou_magnifying-glass} + M\n\nShow start menu: &#160; {fou_social-windows} &#160; {fou_magnifying-glass}\n(requires Taskbar to be set as the assist app in Settings)</string>
    <string name="tb_pref_description_keyboard_shortcut_alt">Start/stop Taskbar\n&#8226; WinKey+M / Search+M\n\nShow start menu\n&#8226; WinKey / Search\n(requires Taskbar to be set as the assist app in Settings)</string>
    <string name="tb_loading_apps">Loading apps&#8230;</string>
    <string name="tb_press_enter">No apps found\n\nPress Enter to search using Google</string>
    <string name="tb_nothing_to_see_here">Nothing to see here, move along&#8230;</string>
    <string name="tb_error_dialog_title">Error</string>
    <string name="tb_error_dialog_message">Unfortunately, due to OEM restrictions, this feature can\'t be enabled on your device.\n\nYou may still be able to enable it by using this adb shell command:\n\nappops set %1$s %2$s allow</string>
    <string name="tb_action_ok">OK</string>
    <string name="tb_action_cancel">Cancel</string>
    <string name="tb_pin_app">Pin to recents</string>
    <string name="tb_unpin_app">Unpin from recents</string>
    <string name="tb_block_app">Block from recents</string>
    <string name="tb_unblock_app">Unblock from recents</string>
    <string name="tb_clear_pinned_apps">Reset per-app preferences</string>
    <string name="tb_pref_title_hide_foreground">Hide icon for foreground application</string>
    <string name="tb_pref_summary_hide_foreground">May reduce performance</string>
    <string name="tb_pref_title_theme">Theme</string>
    <string-array name="tb_pref_theme_list">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="tb_lock_device_not_supported">Not supported on this device</string>
    <string name="tb_pref_title_shortcut_icon">Show shortcut icon for pinned apps</string>
    <string name="tb_freeform_dialog_title">Enable freeform support</string>
    <string name="tb_freeform_dialog_message">In order for Taskbar to launch apps in freeform window mode, please follow these steps:\n\n&#8226; Go to Developer Options\n\n&#8226; Scroll to the bottom and turn on \"%s\"\n\n&#8226; Reboot your device</string>
    <string name="tb_pref_title_invisible_button">Hide button while Taskbar is collapsed</string>
    <string name="tb_pref_title_freeform_mode_help">Help &amp; instructions for freeform mode</string>
    <string name="tb_freeform_help_dialog_title">Help &amp; instructions</string>
    <string name="tb_action_close">Close</string>
    <string name="tb_pref_header_freeform">Freeform mode</string>
    <string name="tb_pref_max_num_of_recents">Max number of recent/pinned apps</string>
    <string name="tb_icon_pack">Icon pack</string>
    <string name="tb_pref_title_use_mask">Use masks for unthemed icons</string>
    <string name="tb_pref_description_use_mask">May reduce performance when an icon pack is set</string>
    <string name="tb_disable_scrolling_list">Disable scrolling list</string>
    <string name="tb_pref_header_appearance">Appearance</string>
    <string name="tb_dashboard">Enable widget support</string>
    <string name="tb_dashboard_description">Add a button to the Taskbar that displays widgets when pressed</string>
    <string name="tb_dashboard_grid_size">Widget dashboard grid size</string>
    <string name="tb_pref_title_accent_color">Accent color</string>
    <string name="tb_reset_colors">Reset colors to default</string>
    <string name="tb_visual_feedback">Visual feedback when selecting icons</string>
    <string name="tb_transparent_start_menu">Transparent start menu</string>
    <string name="tb_navigation_bar_buttons">Navigation bar buttons</string>
    <string name="tb_navigation_bar_buttons_description">Add additional buttons to the Taskbar that perform navigation bar actions</string>
    <string name="tb_full_length">Expand area with whitespace</string>
    <string name="tb_color_picker_alpha">Alpha</string>
    <string name="tb_color_picker_red">Red</string>
    <string name="tb_color_picker_green">Green</string>
    <string name="tb_color_picker_blue">Blue</string>
    <string name="tb_pref_secondscreen_description">Change your device\'s resolution and density when connected to an external display, for a Continuum or DeX-like experience</string>
    <string name="tb_pref_title_tasker_enabled">Allow third-party app integration</string>
    <string name="tb_pref_summary_tasker_enabled">Disable for improved security</string>
    <string name="tb_pref_title_start_button_image">Start button image</string>
    <string name="tb_pref_centered_icons">Centered app icons</string>
    <string name="tb_pref_title_sys_tray">Show status icons and clock</string>
    <string name="tb_pref_description_sys_tray">Only visible when Taskbar is horizontal</string>
    <string name="tb_pref_header_desktop_mode">Desktop mode</string>
    <string name="tb_pref_description_enable_recents">Required for recent apps to appear</string>
    <string name="tb_hide_icon_labels">Hide app icon labels</string>
    <string name="tb_pref_notification_count_title">Show notification count in status area</string>
    <string name="tb_pref_notification_count_description">Requires notification access</string>
    <string name="tb_enable_additional_settings_message_1">Taskbar can optionally use elevated permissions to improve your desktop mode experience. These permissions are granted by running an adb shell command.\n\nIf you wish to continue, connect your device to a computer with the Android SDK installed, and run the following command (one line):</string>
    <string name="tb_enable_additional_settings_message_2">Once granted, the additional settings will be enabled when a display is connected.</string>
</resources>