<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 Braden Farmer

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="24dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <View
        android:id="@+id/color_preview"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="horizontal" >

        <TextView
            android:gravity="start"
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/tb_color_picker_alpha" />
        
        <SeekBar
            android:id="@+id/alpha_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:thumbTint="@color/tb_alpha"
            android:progressTint="@color/tb_alpha"
            android:progressBackgroundTint="@color/tb_alpha" />

        <TextView
            android:id="@+id/alpha_value"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="horizontal" >

        <TextView
            android:gravity="start"
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/tb_color_picker_red" />

        <SeekBar
            android:id="@+id/red_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:thumbTint="@color/tb_red"
            android:progressTint="@color/tb_red"
            android:progressBackgroundTint="@color/tb_red" />

        <TextView
            android:id="@+id/red_value"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="horizontal" >

        <TextView
            android:gravity="start"
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/tb_color_picker_green" />

        <SeekBar
            android:id="@+id/green_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:thumbTint="@color/tb_green"
            android:progressTint="@color/tb_green"
            android:progressBackgroundTint="@color/tb_green" />

        <TextView
            android:id="@+id/green_value"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="horizontal" >

        <TextView
            android:gravity="start"
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/tb_color_picker_blue" />

        <SeekBar
            android:id="@+id/blue_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:thumbTint="@color/tb_blue"
            android:progressTint="@color/tb_blue"
            android:progressBackgroundTint="@color/tb_blue" />

        <TextView
            android:id="@+id/blue_value"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/hex_preview"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>